[gd_scene load_steps=7 format=3 uid="uid://cb3e1h03ork2k"]

[ext_resource type="PackedScene" uid="uid://oggieugx0x21" path="res://Scenes/World_related/first_level.tscn" id="1_6t0nb"]
[ext_resource type="Script" path="res://Scripts/World_related/game.gd" id="1_k8tsl"]
[ext_resource type="Script" path="res://Scripts/Multiplayer/GameManager.gd" id="2_sn7uf"]
[ext_resource type="PackedScene" uid="uid://b51wn1ulqn6h1" path="res://Scenes/Player_related/player.tscn" id="2_sr15d"]
[ext_resource type="PackedScene" uid="uid://cr1d0wyu4eltn" path="res://Scenes/Player_related/ex_pbar.tscn" id="4_tm87u"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_xfbfw"]
properties/0/path = NodePath("CanvasLayer/EXPbar:value")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("CanvasLayer/EXPbar:max_value")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("CanvasLayer/EXPbar:min_value")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:player_count")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:spell_confirmation_count")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath(".:player_and_spell_selected")
properties/5/spawn = true
properties/5/replication_mode = 1

[node name="Game" type="Node2D" groups=["Game"]]
script = ExtResource("1_k8tsl")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_xfbfw")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Scenes/Multiplayer/mulitplayer_player.tscn")
spawn_path = NodePath("../PlayerSpawnNode")
spawn_limit = 2

[node name="FirstLevel" parent="." groups=["Level"] instance=ExtResource("1_6t0nb")]
position = Vector2(537, 503)

[node name="WorldDrops" type="Node2D" parent="." groups=["WorldDrops"]]

[node name="Player" parent="." instance=ExtResource("2_sr15d")]
position = Vector2(542, 503)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="EXPbar" parent="CanvasLayer" instance=ExtResource("4_tm87u")]
unique_name_in_owner = true

[node name="GameManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_sn7uf")

[node name="MultiplayerHUD" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_left = 489.0
offset_top = 392.0
offset_right = 529.0
offset_bottom = 432.0

[node name="Host" type="Button" parent="MultiplayerHUD"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "HOST"

[node name="Join" type="Button" parent="MultiplayerHUD"]
layout_mode = 0
offset_left = 2.0
offset_top = 34.0
offset_right = 45.0
offset_bottom = 65.0
text = "JOIN"

[node name="PlayerSpawnNode" type="Node2D" parent="."]
position = Vector2(518, 513)

[connection signal="pressed" from="MultiplayerHUD/Host" to="GameManager" method="_on_host_pressed"]
[connection signal="pressed" from="MultiplayerHUD/Join" to="GameManager" method="_on_join_pressed"]
